added more stuff to Gd

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -1,7 +1,6 @@
 \chapter{Coupling between spin and strain density waves}
 \section{Introduction}
-The coupling between orders
-
+Chromium is an itinerant antiferromagnetic metal. It is the hallmark example of a material where a SDW develops due to local repulsive interactions of the electron gas, combined with a nesting of the fermi surface. 
 \section{Experimental methods}
 Before focusing on the theoretical description of the coupling between the SDW and CDW, we take a look at the experimental techniques and results that we are seeking to reproduce. Optical pulses were used to heat up the material, mostly absorbed by the SDW order through photoexcitation. An x-ray free-electron laser (XFEL) is then used to probe the bragg-peaks of the CDW and how they change in time. The need of the XFEL can be attributed to the very short timescales at which the observed behavior is excibited by the material, with resolutions of a couple femtoseconds being made accessible.
 The scattering intensity of the bragg peak is directly proportional to the magnitude of the CDW, offering both phase and amplitude information of the oscillation that we study. It is important to realize that the SDW order is not directly accessible through these kinds of measurements, so we are effectively studying the effect of exciting one order parameter through the reaction of the other due to the coupling between them.
