--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -7,39 +7,39 @@ By alternating the information storing (usually) ferromagnetic domains with nonm
 This effect is based on the depence of the electrical conductivity of ferromagnetic metals on the spin orientation of the current carriers, a beautiful example of the technological promises that the field of spintronics holds.
 There remains, however, the issue of writing the information in the first place.
 In current state of the art storage technologies from the point of view of density, this is still done by applying an external magnetic field to reorient the ferromagnetic domains. One can imagine this to be quite an inefficient process, both from the point of view of granularity (stray fields and non-locality of the magnetic fields limit the minimum size of the domains) as from that of energetics.
-This conundrum drives much of the current research in the field of spintronics, with promising applications like spin-transfer torque devices, utilizing the torque applied by spin-polarized current carriers on the magnetic moments inside the storage medium, circumventing the need to create a magnetic field from circular currents.
+Improving these figures of merit drives much of the current research in the field of spintronics, with promising applications like spin-transfer torque devices, utilizing the torque applied by spin-polarized current carriers on the magnetic moments inside the storage medium, circumventing the need to create a magnetic field from circular currents.
 It is clear that the longevity of magnetism based order, combined with the easy of manipulation associated with charge based order is highly desirable.
-This leads us to the topic of this chapter, namely the magnetoelectric effect in multiferroic materials.
+This leads us to the topic of this chapter, namely the magnetoelectric effect in multiferroic insulators.
 As the name implies, the magnetoelectric effect allows for the electric control of magnetic order or the magnetic control of ferroelectric polarization\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}, the former of which is most important for technological applications.
 In practice, however, there are many issues that limit the effectiveness of this cross-order coupling, and the number of multiferroic materials is limited to begin with.
 This latter point can be already understood from a symmetry point of view.
 Namely, ferroelectric materials break inversion symmetry, whereas magnetic order needs the breaking of time reversal symmetry.
-This leads to only 13 Shubnikov magnetic point groups that allow simultaneous appearance of ferroelectricity and magnetization\cite{Wang2009}.
-Moreover, it has become clear that not all compounds that belong to one of those 13 groups showcase multiferroicity.
-Another reason for the relative sparseness of multiferroic materials is that generally speaking ferroelectricity and magnetism are not compatible on the ionic level, i.e. they require ions with different valence configurations.
-For example, in perovskites (ABO$_3$, A cation, B anion), there are many ferroelectric oxides and magnetic oxides, but there are almost no materials belonging to this class that harbor both orders.
-In this case, the reason is that, in general, a prerequisite for ferroelectricity is a B-site configuration of $d^0$, i.e. an empty $d$-shell, or the presence of lone pairs (ns$^2$).
+There are thus only 13 Shubnikov magnetic point groups that allow simultaneous appearance of ferroelectricity and magnetization\cite{Wang2009}, but not all compounds that belong to one of those 13 groups showcase multiferroicity.
+Another reason for the relative sparseness of multiferroic materials is that, generally speaking, ferroelectricity and magnetism are not compatible on the ionic level, i.e. they require ions with different valence configurations.
+For example, in perovskites (ABO$_3$, A cation, B anion), there are many ferroelectric or magnetic oxides, but the combination of the two is very uncommon.
+The reason in this case is that, in general, a prerequisite for ferroelectricity is a valence configuration of $d^0$, i.e. an empty $d$-shell, or the presence of lone pairs (ns$^2$).
 Conversely, magnetism requires partially filled $d$ or $f$ shells, such that the unpaired electrons lead to nonzero magnetic moments on the constituent ions.
-It is clear that these two requirements are impossible to satisfy simultaneously and this is one of the major reason why multiferroics are not commonplace \lp{there is also the issue of hybridization where empty shells lead to occupation of bonding orbitals and half-filled orbitals engaging in anti-bonding hybridization never stabilizing the ionic shift, not sure if I should also discuss that}.
-There are two ways around these issues, which lead to so-called Type-I and Type-II multiferroics\cite{Khomskii2009}.
-Multiferroic materials of the Type-I variety harbor two different `subsystems` that separately handle either the magnetic or ferroelectric order.
+It is clear that it is impossible to reconcile these two requirements simultaneously, thus making multiferroics not commonplace \lp{there is also the issue of hybridization where empty shells lead to occupation of bonding orbitals and half-filled orbitals engaging in anti-bonding hybridization never stabilizing the ionic shift, not sure if I should also discuss that}.
+There are two ways around this issue, which lead to so-called Type-I and Type-II multiferroics\cite{Khomskii2009}.
+The Type-I variety harbors two different `subsystems` that separately handle either the magnetic or ferroelectric order.
 Referring back to the perovskites discussed above, one could, for example, imagine a ferroelectrically active A-site cation such as Bi$^{3+}$ or Pb$^{3+}$, combined with a magnetically active B-site anion such as Fe\cite{Wang2009}.
 This strategy gets around the issue of the mutual exclusivity of ferroelectricity and magnetization on the atomic level, and can lead to large magnitude of both orders \lp{specifics?}, but also tends to lead to small magnetoelectric effects due to the different origins of the two orders. 
-Ideally, one uses the other variety, i.e. Type-II multiferroic materials, where the magnetic and ferroelectric order originate from the same mechanism.
+Ideally, one uses the other variety, i.e. Type-II multiferroicity, where the magnetic and ferroelectric orders both originate from the same mechanism.
 The usual situation in these Type-II materials is that one order stabilizes, lowering the symmetry of the material and thus allowing for the other to also appear.
 The key example that we discuss here is that of an inversion breaking magnetic configuration that leads to the appearance of ferroelectricity\lp{add more examples, show the symmetry considerations discussed in wang for spin-spirals?}.
 Although the size of the electric polarization thus created is usually orders of magnitude smaller than in Type-I materials, the common origin of the two orders leads to a very sizable magnetoelectric effect.
-Here we specifically investigate GdMn$_2$O$_5$, an example of a type-II multiferroic\cite{Khomskii2009}, where, as will be shown below, the ferroelectric polarization can be controlled to a high degree by the application of an external magnetic field.
-Gd$^{3+}$ is special with respect to the other possible rare-earths in the orthorhombic magnanites $R$Mn$_2$O$_5$ ($R$ being one of the rare-earths), because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM, and corresponding anisotropic charge distribution. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms.
+Here we specifically investigate GdMn$_2$O$_5$, an example of a type-II multiferroic\cite{Khomskii2009}, where the ferroelectric polarization can be controlled to a high degree by the application of an external magnetic field, as will be shown below.
+Gd$^{3+}$ is special with respect to the other rare-earths in the orthorhombic magnanites $R$Mn$_2$O$_5$ ($R$ being one of the rare-earths), because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM and associated anisotropic charge distribution. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms.
 This turns out to be one of the main reasons behind the very large electric polarization and magnetoelectric coupling, compared to other multiferroics, and even to other $R$Mn$_2$O$_5$ compounds.
 
 The orthorhombic manganites have a very complex crystalline structure, which leads to a wealth of different phases depending on the temperature, magnetic field and even electric-field poling history \cite{Zheng2019}.
 To keep the discussion tractable and in line with the experiments that were performed, we give a summary of the transitions and phases that are important for this part of the Thesis.
 
-All orthorhombic manganites have a paramagnetic space group $Pbam$ \cite{Alfonso97a} at high temperature, which eventually gets lowered to $P_ab2_1a$ when the commensurate magnetic order locks in at $T_{N} \sim 33K$, with propagation vector $\bm{k} \sim (1/2, 0.0, 0.0)$, i.e. there is a unit cell doubling along the crystalline $a$ direction. Spins are ordered ferromagnetically along the crystalline $c$ direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric order along the $b$ direction \cite{Lee13}.
+All orthorhombic manganites have a paramagnetic space group $Pbam$ \cite{Alfonso97a} at high temperature, which eventually gets lowered to $P_ab2_1a$ when the commensurate magnetic order locks in below $T_{N} \sim 33K$.
+This order is characterised by the propagation vector $\bm{k} \sim (1/2, 0.0, 0.0)$, i.e. there is a unit cell doubling along the crystalline $a$ direction. Spins are ordered ferromagnetically along the crystalline $c$ direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric order along the $b$ direction \cite{Lee13}.
 When the temperature is lowered further, the polarization $P_b$ saturates to a maximum value of around $3600 \mu C/m^2$, which is the largest of all rare-earth magnanites, but still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \sim 2 \times 10^5 \mu C/m^2$.
 The magnetic configuration features two AFM Mn chains per unit cell, that feature both $Mn^{3+}$ pyramids and $Mn^{4+}$ octahedra, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}. The Mn spins of the chains in GdMn$_2$O$_5$ lie mostly along the easy axis of the Mn pyramids, making angles of $\pm 23.4^\circ$ with the $a$-axis.
-There are two sources of ferroelectricity, both originate from symmetric exchange striction \ref{Choi2008}, where the AFM superexchange combined with the spin configuration will decrease the length of bonds with antiparallel spins, and increase those with parallel spins. The first of those contributions, $P_{MM}$, comes from the interchain (roughly along the $b$-direction) frustration between Mn$^{3+}$ -- Mn$^{4+}$ -- Mn$^{3+}$ ion sequences, the second, $P_{GM}$ originates from the interaction between the Gd spins and neighboring Mn chains.
+There are two sources of ferroelectricity as shown in Fig.~\ref{fig:GdMn2O5_unit_cell} panels (b-c), both originate from symmetric exchange striction \ref{Choi2008}, where the AFM superexchange combined with the spin configuration will decrease the length of bonds with antiparallel spins, and increase those with parallel spins. The first of those contributions (panel b), $P_{MM}$, comes from the interchain (roughly along the $b$-direction) frustration between Mn$^{3+}$ -- Mn$^{4+}$ -- Mn$^{3+}$ ion sequences, the second (panel c), $P_{GM}$ originates from the interaction between the Gd spins and neighboring Mn chains.
 Both of them result in both ionic (leading to the lower $P_ab2_1a$ symmetry), and electronic contributions to the polarization.
 $P_{MM}$ is also present in other $R$Mn$_2$O$_5$ compounds, but it was shown \ref{Khomskii2009} that the electronic and ionic contributions are oriented in opposite sense and nearly cancel eachother.
 There is no such cancellation associated with $P_{GM}$, which causes the eventual polarzation of the material to be relatively large. Also, due to the size (nominally $S=7/2$) and isotropic character of the Gd spins, their susceptibility with an externally applied field is high, leading to a very high magnetoelectric coupling that results in a variation of $P_b$ of up to $5000 \mu C/m^2$ when a magnetic field is applied \ref{Lee13}. 
@@ -51,10 +51,23 @@ As will be shown below, these three regimes can each be assigned a topological n
 %Even though the AFM intrachain superexchange interactions dominate over the AFM interchain interactions, there is nonetheless a geometric frustration due to the crystal structure, which can be seen most easily seen from the Mn pentagons surrouding the Gd atoms. This means that all AFM exchanges can not be satisfied at the same time, causing certain Mn bonds between the chains to have energetically unfavorable spin alignment. This leads to the first contribution to the ferroelectric polarization through Heisenberg exchange striction, lengthening bonds that have parallel spins and shortening those that have antiparallel ones.
 
 \begin{figure}
-	\IncludeGraphics{unit_cell}
-	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Magnetic unit cell of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. The zig-zag chains along the $a$-direction (cyan lines) show which Mn ions are linked with strong AFM exchange, resulting in the $\mathbf{L}_1$ and $\mathbf{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black box. Finally, the yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$.}
+	\IncludeGraphics{unit_cell.pdf}
+	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Unit cell and magnetic configuration of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. a) {\it Magnetic unit cell}, the zig-zag chains along the $a$-direction (cyan lines) show which Mn ions are linked with strong AFM exchange, resulting in the $\mathbf{L}_1$ and $\mathbf{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black box and the yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$. (b-c) {\it Symmetric magnetostriction}, the black arrows signify the zero field orientation of the spins. The yellow arrows denote the expanding bonds due to alignment of spins and AFM exchange, and the blue arrows denote contracting bonds.}
 \end{figure}
-
+\section{Experimental results}
+The results of the experiments performed on single crystal GdMn$_2$O$_5$ samples are shown in Fig.~\ref{fig:GdMn2O5_experiment}. As can be seen from the varying behaviors in panels (a-d), the evolution of $P_b$ with $|H|$ is very dependent on it's angle with the $a$-axis, $\phi_H$.
+As alluded to before, at a certain magnitude of this angle and at low temperature, a peculiar deterministic four-state hysterisis loop develops. 
+At higher temperature the usual two-state hysterisis loop is observed, also at the magic angle, as shown in panel e.
+The complexity and low symmetry of the material leads to a wealth of different effects, which is clear from the details of the $P_b$ evolution at $T=4K$, shown in panel e, but also from some details of the evolution at $T=2K$.
+Here we will focus on the overall behavior, i.e. how the main four-state regime develops as an interpolation between the high and low angle regimes that have the more usual two state switching loop.
+There is a discrepancy between these experiments and earlier ones performed in Ref.~\cite{Lee13}, namely at low angles $\phi_H$ there is no $P_b$ reversal observed, and the switching behavior at low and high angles are similar.
+It is not clear what led to this discrepancy, from our theoretical model it will be shown that the behavior in Ref.~\cite{Lee13} arises, rather than the one observed here.
+\begin{figure*}[t]
+    \centering
+    \IncludeGraphics[width=0.99\linewidth]{fig_exp.png}
+\caption{ \label{fig:GdMn2O5_experiment} {\bf Evolution of the electric polarization loop across critical angle  and critical temperature.} (a) At higher temperatures only a small step is seen at the transition that shows some hysteresis and the two-state switching; (b) 4-state switching starts to appear approximately from $T=5$~K.(c) four-state hysteresis loop is clearly seen at $T=2.3$~K with the magnetic field at the ``magic'' angle;  
+(d-f) Field dependence of the electric polarization of GdMn$_2$O$_5$ for different off-axis orientations of the applied magnetic field. (d,f): Conventional two-state switching is observed if magnetic field is (d) far away from the ``magic" direction  or (f) very close to the crystallographic $a$-axis. (e,g): Unusual four-state hysteresis loop for the magnetic field direction close to the magic angle of $\pm 9^o$. The inset shows the sequence of the magnetic field-sweeps. The labels 1-4 mark the four polarization states. The arrows show the direction of magnetic field-change during the sweep. The experiments have been done at $T=2.3$\,K. }
+\end{figure*}
 \section{Modeling}
 In order to describe the physics at play we use a quasi-classical model Hamiltonian with eight Gd spins designated by unit vectors $\mathbf{S}_i, i=1..8$, two AFM order parameters $\mathbf{L}_\alpha, \alpha=1,2$ (also unit vectors), one for each Mn chain, and the slave order parameter $P_b$ for the polarization, see Fig~\ref{fig:GdMn2O5_unit_cell}.
 Using one AFM order parameter for each Mn chain amounts to taking the rigid spin approximation, a simplification that is justified by the large intrachain AFM exchanges, compared with the relatively small exchanges between the two chains.
