--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -64,11 +64,11 @@
 
 \Include{Introduction}
 \Include{Theory}
-% \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
+\chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 \Include{Rashba}
 \Include{Cr}
 \Include{GdMn2O5}
 \Include{Softening}
-\chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
+% \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
